--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "version"          : "1.0.0",
     "description"      : "Yii2 support module. Ticket system with customer.",
     "homepage"         : "https://git.hexa.com.ua/yii2/support",
-    "type"             : "module",
+    "type"             : "yii2-extension",
     "minimum-stability": "stable",
     "author"           : [
         {
